--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,51 +1,47 @@
-<nav>
-    <link rel="stylesheet" href = "login.component.css">
-    <div class="row">
-      <div class="col-34">
-        <form class="row g-3">
-          <div class="col-md-4">
-            <label for="validationDefault01" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+<link rel="stylesheet" href = "login.component.css">
+<main class="login-form">
+  <div class="cotainer">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+            <div class="card border-primary mb-3">
+                  <div class="card-header alert alert-info text-center" ><i class="fas fa-user fa-2x"></i><font size=6>Login</font></div>
+                    <div class="card-body">
+                      <form action="" method="">
+                          <div class="form-group row">
+                              <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
+                              <div class="col-md-6">
+                                  <input type="text" id="email_address" class="form-control" name="email-address" required autofocus>
+                              </div>
+                          </div>
+                          <div class="form-group row">
+                              <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                              <div class="col-md-6">
+                                  <input type="password" id="password" class="form-control" name="password" required>
+                              </div>
+                          </div>
+
+                          <div class="form-group row">
+                              <div class="col-md-6 offset-md-4">
+                                  <div class="checkbox">
+                                      <label>
+                                          <input type="checkbox" name="remember"> Recuerdame
+                                      </label>
+                                  </div>
+                              </div>
+                          </div>
+
+                          <div class="col-md-6 offset-md-4">
+                              <button type="submit" class="btn btn-primary"  routerLink="/listar-usuario">
+                                  Sign Up
+                              </button>
+                              <a href="#" class="btn btn-link" routerLink="/registrar-personas">
+                                  ¿No te has registrado?
+                              </a>
+                          </div>
+                  </form>
+              </div>
           </div>
-          <div class="col-md-4">
-            <label for="validationDefault02" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
-          </div>
-          <div class="col-md-4">
-            <label for="validationDefaultUsername" class="form-label">Nombre de usuario</label>
-            <div class="input-group">
-              <span class="input-group-text" id="inputGroupPrepend2">@</span>
-              <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <label for="validationDefault03" class="form-label">Ciudad</label>
-            <input type="text" class="form-control" id="validationDefault03" required>
-          </div>
-          <div class="col-md-3">
-            <label for="validationDefault04" class="form-label">Estado</label>
-            <select class="form-select" id="validationDefault04" required>
-              <option selected disabled value="">Choose...</option>
-              <option>...</option>
-            </select>
-          </div>
-          <div class="col-md-3">
-            <label for="validationDefault05" class="form-label">Codigo postal</label>
-            <input type="text" class="form-control" id="validationDefault05" required>
-          </div>
-          <div class="col-12">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-              <label class="form-check-label" for="invalidCheck2">
-                Acepto los términos y condiciones
-              </label>
-            </div>
-          </div>
-          <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit form</button>
-          </div>
-        </form>
       </div>
-    </div>
-  </nav>
-  
+  </div>
+  </div>
+</main>
