--- a/src/app/animales/animales.component.html
+++ b/src/app/animales/animales.component.html
@@ -1,1 +1,9 @@
 <p>animales works!</p>
+<div class="row">
+<div class="text-center">
+    <img src="https://www.lavanguardia.com/files/image_449_220/uploads/2019/10/02/5fa53234969ff.jpeg"  class="w-auto p-3 h-10" style="background-color: #eee;">
+</div>
+    
+</div>
+
+<!--<div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>-->
