--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,7 +18,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Animales</a>
+                    <a class="nav-link" routerLink="/animales">Animales</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Habitats</a>
