--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,1 +1,41 @@
-<p>usuarios works!</p>
+<nav>
+<link rel="stylesheet" href = "usuarios.component.css">
+<div class="row g-3">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+    </div>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">ID</label>
+          <input type="text" class="form-control" id="inputAddress" placeholder="codigo de identificacion">
+        </div>
+       
+        <div class="col-md-4">
+          <label for="inputState" class="form-label">Rol</label>
+          <select id="inputState" class="form-select">
+            <option selected>Choose...</option>
+            <option>Visitante</option>
+            <option>Veterinario</option>
+            <option>Taquillero</option>
+            <option>Guia</option>
+            <option>Cuidador de</option>
+          </select>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Default checkbox
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+          Checked checkbox
+        </label>
+      </div>
+        
+  </div>
+</nav>
+
