--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" routerLink="/animales">Animales</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login">Login</a>
+                    <a class="nav-link" routerLink="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Habitats</a>
