--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">Habitats</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Usuarios</a>
+                    <a class="nav-link" routerLink="/usuarios"> <i class="fas fa-users"></i> Usuarios</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
