--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,41 +1,72 @@
 <nav>
-<link rel="stylesheet" href = "usuarios.component.css">
-<div class="row g-3">
-    <div class="col">
-      <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-    </div>
-    <div class="col">
-      <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-    </div>
-        <div class="col-12">
-          <label for="inputAddress" class="form-label">ID</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="codigo de identificacion">
-        </div>
-       
-        <div class="col-md-4">
-          <label for="inputState" class="form-label">Rol</label>
-          <select id="inputState" class="form-select">
-            <option selected>Choose...</option>
-            <option>Visitante</option>
-            <option>Veterinario</option>
-            <option>Taquillero</option>
-            <option>Guia</option>
-            <option>Cuidador de</option>
-          </select>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          Default checkbox
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-        <label class="form-check-label" for="flexCheckChecked">
-          Checked checkbox
-        </label>
-      </div>
-        
-  </div>
-</nav>
+    <link rel="stylesheet" href="usuarios.component.css">
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card border-primary mb-3">
+                    <div class="card-header alert alert-info text-center">
+                        <font size=6>Usuario</font>
+                    </div>
+                    <div class="col-12">
+                        <label for="inputAddress" class="form-label">Tipo de usuario</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="">
+                    </div>
+                    <br>
+                    <div class="col-12">
+                        <label for="inputAddress" class="form-label">Nombre de usuario</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="">
+                    </div>
+                    <br>
+                    <div class="col">
+                        <label for="inputState" class="form-label">Rol</label>
+                        <select id="inputState" class="form-select">
+                            <option selected>Elegir...</option>
+                            <option>Visitante</option>
+                            <option>Veterinario</option>
+                            <option>Taquillero</option>
+                            <option>Guia</option>
+                            <option>Cuidador de animales</option>
 
+                        </select>
+
+                        <br>
+                        <fieldset class="row mb-3">
+                            <legend class="col-form-label col-sm-2 pt-0">Persona exclusiva</legend>
+                            <div class="col-sm-10">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">Si</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">No</label>
+                                </div>
+                            </div>
+                            <br>
+                            <br>
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-primary"
+                                    style="margin-left: 280px">Agregar</button>
+
+                                <button type="submit" class="btn btn-primary" style="margin-left: 100px">Buscar</button>
+
+                                <button type="submit" class="btn btn-primary"
+                                    style="margin-left: 100px">Eliminar</button>
+                            </div>
+                        
+                        </fieldset>
+                    </div>
+                   
+
+
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    
+
+</nav>
