--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,9 +36,9 @@
 
                             <div class="col-md-6 offset-md-4">
                                 <button type="submit" class="btn btn-primary" routerLink="/listar-usuario">
-                                    Sign Up
+                                    Log in
                                 </button>
-                                <a href="#" class="btn btn-link" routerLink="/registrar-personas">
+                                <a class="btn btn-link" routerLink="/registrar-personas">
                                     ¿No te has registrado?
                                 </a>
                             </div>
