--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,13 +14,13 @@
                                     Address</label>
                                 <div class="col-md-6">
                                     <input type="text" id="email_address" class="form-control" name="email-address"
-                                        required autofocus>
+                                        required autofocus [(ngModel)]="email">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                                 <div class="col-md-6">
-                                    <input type="password" id="password" class="form-control" name="password" required>
+                                    <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena">
                                 </div>
                             </div>
 
@@ -35,7 +35,7 @@
                             </div>
 
                             <div class="col-md-6 offset-md-4">
-                                <button type="submit" class="btn btn-primary" routerLink="/listar-usuario">
+                                <button type="submit" class="btn btn-primary" routerLink="/listar-usuario" (click)="onLogin()">
                                     Log in
                                 </button>
                                 <a class="btn btn-link" routerLink="/registrar-personas">
