--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -9,17 +9,28 @@
                     </div>
                     <div class="col-md">
                         <label for="inputAddress" class="form-label">Tipo de usuario</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%">
+                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%"
+                            [(ngModel)]="tipoUsuario">
                     </div>
                     <br>
                     <div class="col-md">
                         <label for="inputAddress" class="form-label">Nombre de usuario</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%">
+                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%"
+                            [(ngModel)]="nombreUsuario">
+                    </div>
+                    <br>
+                    <div class="col-md">
+                        <label for="inputAddress" class="form-label">Persona exclusiva</label>
+                        <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="personaExclusiva">
+                            <option selected>Elegir...</option>
+                            <option>Si</option>
+                            <option>No</option>
+                        </select>
                     </div>
                     <br>
                     <div class="col-md">
                         <label for="inputState" class="form-label">Rol</label>
-                        <select id="inputState" class="form-select" style="width : 50%">
+                        <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="rol">
                             <option selected>Elegir...</option>
                             <option>Visitante</option>
                             <option>Veterinario</option>
@@ -28,23 +39,13 @@
                             <option>Cuidador de animales</option>
                         </select>
                         <div class="move-2">
+
+                           
                             <fieldset class="row mb-3">
-                                <legend class="col-form-label col-xs-2 pt-0"><br>Persona exclusiva</legend>
-                                <div class="col-sm-10">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio1" value="option1">
-                                        <label class="form-check-label" for="inlineRadio1">Si</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio2" value="option2">
-                                        <label class="form-check-label" for="inlineRadio2">No</label>
-                                    </div>
-                                </div>
+
                                 <div class="col-12"><br>
-                                    <button type="submit" class="btn btn-primary"
-                                        style="margin-left: 280px">Agregar</button>
+                                    <button type="submit" class="btn btn-primary" style="margin-left: 270px"
+                                        (click)="llamadoRol()">Agregar</button>
 
                                     <button type="submit" class="btn btn-primary"
                                         style="margin-left: 100px">Buscar</button>
