--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,51 +1,54 @@
 <link rel="stylesheet" href="login.component.css">
-<main class="login-form">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card border-primary mb-3">
-                    <div class="card-header alert alert-info text-center"><i class="fas fa-user fa-2x"></i>
-                        <font size=6> Login</font>
-                    </div>
-                    <div class="card-body">
-                        <form action="" method="">
-                            <div class="form-group row">
-                                <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
-                                    Address</label>
-                                <div class="col-md-6">
-                                    <input type="text" id="email_address" class="form-control" name="email-address"
-                                        required autofocus [(ngModel)]="email">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                                <div class="col-md-6">
-                                    <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena">
-                                </div>
-                            </div>
-
-                            <div class="form-group row">
-                                <div class="col-md-6 offset-md-4">
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox" name="remember"> Recuerdame
-                                        </label>
+<html style="background-image: url(https://wallup.net/wp-content/uploads/2017/03/28/423306-Australia-nature-animals-kangaroos-sunset-silhouette.jpg);background-repeat: no-repeat; background-size: 100%;">
+    <main class="login-form">
+        <div class="container" >
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="card border-primary mb-3" style=" box-shadow: 0px 10px 10px black;box-shadow: 0px 0px 10px 0px #333 inset;">
+                        <div class="card-header alert alert-warning text-center" ><i class="fas fa-user fa-2x"></i>
+                            <font size=6> Login</font>
+                        </div>
+                        <div class="card-body">
+                            <form action="" method="">
+                                <div class="form-group row">
+                                    <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
+                                        Address</label>
+                                    <div class="col-md-6">
+                                        <input type="text" id="email_address" class="form-control" name="email-address"
+                                            required autofocus [(ngModel)]="email">
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="col-md-6 offset-md-4">
-                                <button type="submit" class="btn btn-primary" routerLink="/listar-usuario" (click)="onLogin()">
-                                    Log in
-                                </button>
-                                <a class="btn btn-link" routerLink="/registrar-personas">
-                                    ¿No te has registrado?
-                                </a>
-                            </div>
-                        </form>
+                                <div class="form-group row">
+                                    <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                                    <div class="col-md-6">
+                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena">
+                                    </div>
+                                </div>
+    
+                                <div class="form-group row">
+                                    <div class="col-md-6 offset-md-4">
+                                        <div class="checkbox">
+                                            <label>
+                                                <input type="checkbox" name="remember"> Recuerdame
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+    
+                                <div class="col-md-6 offset-md-4">
+                                    <button type="submit" class="btn btn-primary" routerLink="/listar-usuario" (click)="onLogin()">
+                                        Log in
+                                    </button>
+                                    <a class="btn btn-link" routerLink="/registrar-personas">
+                                        ¿No te has registrado?
+                                    </a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
+</html>
+
