--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,11 +1,12 @@
-<nav>
-    <body background="fondo.jpg"></body>
+
+
     <link rel="stylesheet" href="usuarios.component.css">
+    <html style="background-image: url(https://img.europapress.es/fotoweb/fotonoticia_20150609175905-15061336369_420.jpg);background-repeat: no-repeat; background-size: 100%;">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card border-primary mb-3">
-                    <div class="card-header alert alert-info text-center">
+                    <div class="card-header alert alert- text-center">
                         <font size=6>Usuario</font>
                     </div>
                     <div class="col-md">
@@ -45,13 +46,13 @@
                             <fieldset class="row mb-3">
 
                                 <div class="col-12"><br>
-                                    <button type="submit" class="btn btn-primary" style="margin-left: 270px"
+                                    <button type="submit" class="btn btn-dark" style="margin-left: 270px"
                                         (click)="insertarUsuario()">Agregar</button>
 
-                                    <button type="submit" class="btn btn-primary"
+                                    <button type="submit" class="btn btn-dark"
                                         style="margin-left: 100px"(click)="buscarUsuario()">Buscar</button>
 
-                                    <button type="submit" class="btn btn-primary"
+                                    <button type="submit" class="btn btn-dark"
                                         style="margin-left: 100px"(click)="eliminarUsuario()">Eliminar</button>
                                 </div>
                             </fieldset>
@@ -61,5 +62,5 @@
             </div>
         </div>
     </div>
-</body>
-</nav>
+ </html>
+
