--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,7 +1,7 @@
 
 
     <link rel="stylesheet" href="usuarios.component.css">
-    <html style="background-image: url(https://img.europapress.es/fotoweb/fotonoticia_20150609175905-15061336369_420.jpg);background-repeat: no-repeat; background-size: 100%;">
+    <html style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg);background-repeat: no-repeat; background-size: 100%;">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
