corregir errores de componentes

--- a/src/app/usuarios/registrar-personas/registrar-personas.component.html
+++ b/src/app/usuarios/registrar-personas/registrar-personas.component.html
@@ -3,7 +3,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <link rel="stylesheet" href="registrar-personas.component.css">
-<div style="background-image: url(https://wallup.net/wp-content/uploads/2017/03/28/423306-Australia-nature-animals-kangaroos-sunset-silhouette.jpg); background-size: 100%;">
+<div style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;">
     <div class="container" >
         <br>
         <p class="text-center">Bienvenidos a la página de registro</p>
