--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="card border-primary mb-3">
+                <div class="card border-secondary mb-3">
                     <div class="card-header alert alert- text-center">
                         <font size=6>Usuario</font>
                     </div>
