--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="login.component.css">
-<html style="background-image: url(https://wallup.net/wp-content/uploads/2017/03/28/423306-Australia-nature-animals-kangaroos-sunset-silhouette.jpg);background-repeat: no-repeat; background-size: 100%;">
+<html style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg);background-repeat: no-repeat; background-size: 100%;">
     <main class="login-form">
-        <div class="container" >
+        <div class="container" style="padding-top:1.5cm ;" >
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="card border-primary mb-3" style=" box-shadow: 0px 10px 10px black;box-shadow: 0px 0px 10px 0px #333 inset;">
-                        <div class="card-header alert alert-warning text-center" ><i class="fas fa-user fa-2x"></i>
+                    <div class="card border-secondary mb-3">
+                        <div class="card-header alert alert-Secondary text-center" ><i class="fas fa-user fa-2x"></i>
                             <font size=6> Login</font>
                         </div>
                         <div class="card-body">
