terminos y condiciones(falta hacerlo funcionar, pero ahí estan xD)

--- a/src/app/usuarios/registrar-personas/registrar-personas.component.html
+++ b/src/app/usuarios/registrar-personas/registrar-personas.component.html
@@ -88,7 +88,7 @@
                         <input class="form-control" placeholder="Create password" type="password" [(ngModel)]="contrasena">
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block" (click)="insertarPersonas()"> Create
+                        <button type="submit" class="btn btn-primary btn-block" (click)="insertarPersonas()" routerLink="/venta"> Create
                             Account </button>
                     </div>
                     <p class="text-center">Ya tienes una cuenta? <a routerLink="/login">Log in</a> </p>
