para la entrega. borren eso :V

--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -17,7 +17,7 @@
 
 
 
-<div class="container-fluid">
+<div class="container-fluid" style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;">
     <div class="col-12">
         <h5 class="alert alert-info text-center"><i class="fas fa-store"></i> Venta</h5>
 
@@ -129,3 +129,4 @@
 
 
     </div>
+</div>
