--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,4 @@
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
+<router-outlet style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;"></router-outlet>
