--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -15,9 +15,7 @@
     }
 </style>
 
-
-
-<div class="container-fluid" style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;">
+<div class="container-fluid">
     <div class="col-12">
         <h5 class="alert alert-info text-center"><i class="fas fa-store"></i> Venta</h5>
 
