--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -46,7 +46,7 @@
                                                 </div>
                                                 <div class="col-6">
                                                     <button type="button"
-                                                        class="w-100 btn btn-outline-primary fas fa-eye float-right px-0"></button>
+                                                        class="w-100 btn btn-outline-primary fas fa-eye float-right px-0" (click)="verDetalleTicket(ticket.id)"></button>
                                                 </div>
                                             </div>
                                         </div>
