--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -73,6 +73,17 @@
 
 
         <br>
+
+        <div>
+            <h6 class="alert alert-primary align-middle col-lg-12" role="alert">
+                <div class="row">
+                    <div class="col-2"><i class="fas fa-clipboard-list"></i> Cliente</div>
+                    <div class="col-1">Cedula:</div> <div class="col-3"><input type="text" class="form-control form-control-sm" [(ngModel)]="datosCliente.cedula"></div>
+                    <div class="col-1">Nombre:</div> <div class="col-5"><input type="text" class="form-control form-control-sm" [(ngModel)]="datosCliente.nombre"></div>
+                </div>
+            </h6>
+        </div>
+
         <br>
 
         <div>
@@ -80,11 +91,11 @@
                 <div class="row">
                         <div class="col-10">
                             <div class="mt-2 pe-5">
-                                <i class="fas fa-clipboard-list"></i> Tickets
+                                <i class="fas fa-clipboard-list"></i> Detalle De Venta
                             </div>
                         </div>
                         <div class="col-2">
-                            <button type="button" class="btn btn-success align-top float-right px-1 "><i class="far fa-save"></i> Guardar</button>
+                            <button type="button" class="btn btn-success align-top float-right px-1 " (click)="generarFactura()"><i class="far fa-save"></i> Guardar</button>
                         </div>
                 </div>
 
