--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,6 +17,16 @@
                         <li><a class="dropdown-item" routerLink="/devolucion"><i class="fas fa-store-slash"></i> Devolucion</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-ticket-alt"></i> Tickets
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" routerLink="/crear-ticket"><i class="fas fa-ticket-alt"></i> Crear</a></li>
+                        <li><a class="dropdown-item" routerLink="/litar-ticket"><i class="fas fa-clipboard-list"></i> Listar</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/animales">Animales</a> 
                 </li>
