--- a/src/app/animales/animales.component.html
+++ b/src/app/animales/animales.component.html
@@ -6,4 +6,18 @@
     
 </div>
 
+<div class="cotainer">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card border-primary mb-3">
+            <div class="card-header alert alert-info text-center" >
+          </div>
+          
+        </div>
+    </div>
+        
+
+</div>
+
+
 <!--<div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>-->
