--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,7 +39,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/usuarios"> <i class="fas fa-users"></i> Usuarios</a>
                 </li>
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Reportes
@@ -49,7 +49,7 @@
                         <li><a class="dropdown-item" href="#">Reporte habitats</a></li>
                         <li><a class="dropdown-item" href="#">Reporte taquilla</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
