intento de redireccionar

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -31,13 +31,13 @@
                     <a class="nav-link" routerLink="/animales"><i class="fas fa-paw"></i>Animales</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">Habitats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/usuarios"> <i class="fas fa-users"></i> Usuarios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link pull-left" routerLink="/ventas" style="padding-left: 18cm;"><i class="fas fa-sign-in-alt"></i> Cerrar Sesion </a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
