--- a/src/app/tickets/lista-ticket/lista-ticket.component.html
+++ b/src/app/tickets/lista-ticket/lista-ticket.component.html
@@ -1,1 +1,30 @@
-<p>lista-ticket works!</p>
+<div class="container-fluid">
+    <div>
+        <h5 class="alert alert-info text-center"><i class="fas fa-ticket-alt"></i> Crear ticket</h5>
+    </div>
+
+    <div>
+        <table class="table table-striped table-inverse table-responsive">
+            <thead class="thead-inverse">
+                <tr>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>valor</th>
+                    <th>Tipo</th>
+                    <th>Estado</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let ticket of listaTickets;let i = index">
+                        <td scope="row">{{i+1}}</td>
+                        <td>{{ticket.nombre}}</td>
+                        <td>{{ticket.valor}}</td>
+                        <td>{{ticket.tipo}}</td>
+                        <td>{{ticket.estado}}</td>
+                        <td><button type="button" class="btn btn-primary" [routerLink]="['/crear-ticket', ticket.id]"><i class="fas fa-edit"></i></button></td>
+                    </tr>
+                </tbody>
+        </table>
+    </div>
+</div>
