--- a/src/app/tickets/formulario-ticket/formulario-ticket.component.html
+++ b/src/app/tickets/formulario-ticket/formulario-ticket.component.html
@@ -7,14 +7,13 @@
         <div class="col-1"></div>
 
         <div class="col-6">
-            <form>
                 <div class="mb-3">
-                    <label for="nombreTicket" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombreTicket" [(ngModel)]="ticket.nombre">
+                    <label  class="form-label">Nombre</label>
+                    <input type="text" class="form-control" [(ngModel)]="ticket.nombre">
                 </div>
                 <div class="mb-3">
-                    <label for="valorTicket" class="form-label">Valor</label>
-                    <input type="number" class="form-control" id="valorTicket" [(ngModel)]="ticket.valor">
+                    <label class="form-label">Valor</label>
+                    <input type="number" class="form-control" [(ngModel)]="ticket.valor">
                 </div>
                 <div class="mb-3">
                     <label for="tipoTicket" class="form-label">tipo</label>
@@ -22,8 +21,7 @@
                 </div>
                 <br>
                 <button type="submit" class="btn btn-success" (click)="guardar()"><i class="far fa-save"></i> Guardar</button>
-            </form>
-            
+                        
         </div>
 
         <div class="col-1"></div>
