--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
                                 </div>
     
                                 <div class="col-md-6 offset-md-4">
-                                    <button type="submit" class="btn btn-primary" routerLink="/listar-usuario" (click)="onLogin()">
+                                    <button type="submit" class="btn btn-primary" (click)="onLogin()">
                                         Log in
                                     </button>
                                     <a class="btn btn-link" routerLink="/registrar-personas">
